# chatforge

./: README.md  a.md  a.py  pyproject.toml  requirements.txt
chatforge/: .env copy  .env.example  __init__.py  exceptions.py  test_simple_llm_call.py
chatforge/adapters/: __init__.py  null.py
chatforge/adapters/artifact_editor/: __init__.py  libreoffice_docker.py
chatforge/adapters/artifact_render/: __init__.py  libreoffice_docker.py
chatforge/adapters/audio/: __init__.py  mock.py  voxstream.py
chatforge/adapters/audio_capture/: __init__.py  file_adapter.py  null_adapter.py  sounddevice_adapter.py
chatforge/adapters/audio_playback/: __init__.py  file_sink.py  null_adapter.py  sounddevice_adapter.py
chatforge/adapters/fastapi/: __init__.py  routes.py  schemas.py
chatforge/adapters/realtime/: __init__.py
chatforge/adapters/storage/: __init__.py  memory.py  sqlalchemy.py  sqlite.py
chatforge/adapters/tts/: __init__.py  elevenlabs.py  openai.py
chatforge/adapters/vad/: __init__.py  energy.py
chatforge/config/: __init__.py  agent.py  guardrails.py  llm.py  storage.py
chatforge/domain/: __init__.py
chatforge/domain/storage/: __init__.py  records.py
chatforge/infrastructure/: __init__.py
chatforge/infrastructure/websocket/: __init__.py  client.py  exceptions.py  metrics.py  reconnect.py  serializers.py  types.py
chatforge/middleware/: __init__.py  constants.py  injection.py  pii.py  safety.py
chatforge/ports/: __init__.py  artifact_render.py  audio_capture.py  audio_playback.py  audio_stream.py  knowledge.py  messaging_platform_integration.py  realtime_voice.py  storage.py  storage_types.py  ticketing.py  tracing.py  tts.py  vad.py
chatforge/ports/storage/: __init__.py  agent_run_repository.py  chat_repository.py  llm_call_repository.py  message_repository.py  profiling_repository.py  tool_call_repository.py
chatforge/services/: __init__.py  agent_lifecycle.py  cleanup.py  debug_logger.py  progress.py  session_runtime.py  stream_bridge.py  subagent_stream_bridge.py  tts.py
chatforge/services/agent/: __init__.py  engine.py  state.py
chatforge/services/artifact_editor_agent/: __init__.py  service.py
chatforge/services/context/: __init__.py  layer.py  manager.py  types.py
chatforge/services/deprecated_profiling_data_extraction/: __init__.py  batch_prompts.py  config.py  cpde7llmservice.py  models.py  prompts.py
chatforge/services/deprecated_render_perception/: __init__.py  desc.md  how_it_should_be_in_high_level.md  tackle.md  terminology.md
chatforge/services/llm/: __init__.py  factory.py
chatforge/services/perception/: __init__.py  models.py  service.py
chatforge/services/persona/: __init__.py  behavioral_params.py
chatforge/services/profiling/: __init__.py
chatforge/services/profiling_data_extraction/: __init__.py  config.py  extractor.py  models.py  (+3 more)
chatforge/utils/: __init__.py  async_bridge.py
chatterm/: README.md  pyproject.toml  requirements-all.txt
chatterm/chatterm/: __init__.py  __main__.py  app.py  commands.py  display.py  launcher.py  logger.py  menu.py  settings.py
devdocs/: a.md  myllmservice.md  rate_limiter_libs.md  s2s_context_injection_discussion.md  tts_in_chamberprotocol_plan.md  verdict_about_streaming_ports.md
devdocs/archaeology/: 5_things_or_not.md  intro2codebase.md  old_small_summary.md  small_summary.md
devdocs/clarifications/: adapting_llmservice_dataclasses.md  hexagonal_architecture_explained.md  llm_control_approaches_analysis.md  llm_port_structured_design.md  llmport_wrapper_architecture.md
devdocs/deprecated_archaeology/: intro2codebase.md  small_summary.md  testing_plan.md
devdocs/depricated_clarifications/: architectural_proposal_ports.md  chatforge_suppose_to_be_used.md  llmservice_patterns_analysis.md
devdocs/enhancements/: Render_Perception_Loop.md  actionable_plan.md  agent_return_type.md  chatcore_constants.md  context_var.md  multimodal_agent_support.md  speed_up.md  storage_architecture.md  voice_realtime_support.md  voxstream.md  voxstream_enhacement_discussion.md  voxstream_refactor_new_approach.md
devdocs/inquiries/: a.md
devdocs/old_archaeology/: 5_things_or_not.md  small_summary.md
devdocs/permenant/: architecture.md  context_manager_guide.md  default_schema_specification2.md  recommended_patterns.md
docs/examples/: useAgentStream.ts
examples/: realtime_voice_assistant.py
notebooks/: README.md  chatforge_testing_guide.ipynb  storage_testing_guide.ipynb  tts_testing_guide.ipynb
tests/: README.md  conftest.py  pytest.ini  self-driving-companies (1).md
tests/integration/: __init__.py
tests/ports/: test_audio_stream.py
tests/unit/: __init__.py
tests/utils/: __init__.py  mock_helpers.py
(+382 files in other folders)
