[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatforge"
version = "0.1.0"
description = "A production-ready framework for building AI chat agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.2.0"]
bedrock = ["langchain-community>=0.3.0", "boto3>=1.28.0"]
mlflow = ["mlflow>=2.9.0"]
fastapi = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
# TTS adapters
tts = ["elevenlabs>=1.0.0", "openai>=1.0.0"]
tts-elevenlabs = ["elevenlabs>=1.0.0"]
tts-openai = ["openai>=1.0.0"]
all = [
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "boto3>=1.28.0",
    "mlflow>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["chatforge", "slidefixer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "slidefixer/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
