[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterm"
version = "0.1.0"
description = "Text-based CLI for testing Chatforge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chatforge Team"}
]
keywords = ["chatforge", "llm", "cli", "testing", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "chatforge",  # Core dependency
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0.0",  # Pretty output
]
prompt = [
    "prompt-toolkit>=3.0.0",  # Enhanced input
]
full = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
chatterm = "chatterm.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/chatforge"
Documentation = "https://github.com/your-org/chatforge/tree/main/chatterm"
Repository = "https://github.com/your-org/chatforge"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatterm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
